177187108 add credentials endpoint (#7)
* [#177187108] add credentials endpoints

* [#177187108] add snowql client

* [#177187108] add thd identity client

* [#177187108] move server to api package

* [#177187108] add middlewares for new clients

* [#177187108] add calls to thd idp and snowql to get lcp

* [#177187108] update main with sql client and thd identity client

* [#177187108] change env variable name for THD IDP client ID

* [#177187108] alphabetize permission struct fields

* [#177187108] fix failing tests

* [#177187108] change serviceName to service

* [#177187108] connect to sql database

* [#177187108] update sql fakes

* [#177187108] fix sql tests

* [#177187108] throw error when unable to connect to db

* [#177187108] add fiat client

* [#177187108] integrate with fiat for authz
